# MCP_Server

./: .gitignore  1.ipynb  1.txt  add.py  async.ipynb  brightdata.py  client.py  first_MCP.ipynb  gmail_langchain.ipynb  gmail_mcp.ipynb  l.ipynb  pyproject.toml  requirements.txt  weather.py
AI_Cllient/api/: 1.ipynb  ChatGrok.py  LLM_Response.ipynb  aa.py  main.py  mcp_client.py  mcp_langchain.py
CampusX/: expenses.db  github_mcp.py  main.py
CampusX/Test_Remote_server/: main.py  proxy_server.py
MCP_pen/: another.ipynb  async_demo.py  client._mcp_tut.py  client.py  data.txt  dum.py  exitstack.py  first_tut.py  main.py  output.txt
