[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.71.0",
    "fastapi>=0.120.0",
    "fastmcp>=2.12.4",
    "google-genai>=1.46.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.15.0",
    "python-dotenv>=1.1.1",
]
